# fine-pipe

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: default.yaml
src/fine_pipe/: cli.py  pipeline.py  schema.py  settings.py
src/fine_pipe/ui/: gradio_app.py
