[project]
name = "fine-pipe"
version = "0.1.0"
description = "fine-pipe is a configurable web-to-dataset pipeline that turns a list of URLs into a high-quality text corpus for language model pretraining. It fetches pages, extracts main content, filters by language and quality, removes near-duplicates with MinHash, applies web-cleaning heuristics, detects and redacts PII, and exports the result as sharded Parquet/JSONL with detailed filtering statistics."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasketch>=1.8.0",
    "fast-langdetect>=1.0.0",
    "gradio>=6.2.0",
    "httpx>=0.28.1",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "readability-lxml>=0.8.4.1",
    "regex>=2025.11.3",
    "rich>=14.2.0",
    "spacy>=3.8.11",
    "tenacity>=9.1.2",
    "tldextract>=5.3.0",
    "trafilatura>=2.0.0",
    "typer>=0.20.1",
]


[project.scripts]
fine-pipe = "fine_pipe.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fine_pipe"]